--- a/css/sections.css
+++ b/css/sections.css
@@ -65,15 +65,15 @@ nav#bullets>ul>li>a>img:hover{
 /* NEW ARROWS */
 nav#arrows{
 	display: block;
-	position: absolute;
+	position: fixed;
 	width: 100vw;
 	height: 50px;
 	top: calc(50vh - 20px);
-	z-index: 90909090;
+	z-index: 9000;
 }
 nav#arrows>span{
   display: block;
-  width: 90%;
+  width: 99%;
   height: 100%;
   margin: 0 auto;
 }
@@ -472,6 +472,10 @@ nav#arrows>span>a:last-child{
   -webkit-align-items: center;
   background: rgba(0,0,0,0);
 }
+#wrapSlider>div{ height: auto !important}
+#wrapSlider>a{
+  display: block;
+  margin: 15px auto }
 .sliderRef>img{ width: 90% }
 /* SLIDER */
 .wrap_slider{
@@ -482,7 +486,7 @@ nav#arrows>span>a:last-child{
 .arrow_slider{
   position: absolute;
   min-width: 40px;
-  height: 100%;
+  height: auto;
   margin: 0 10px;
   background-image: url('../img/icons/arrow-out.svg');
   background-repeat: no-repeat;
@@ -605,6 +609,7 @@ nav#arrows>span>a:last-child{
     width: 95%;
     height: 50px;
     top: 0;
+    margin: 0 auto;
   }
   #backgroundProducto{ height: 100vh; }
   #mainProducto{
@@ -665,6 +670,8 @@ nav#arrows>span>a:last-child{
   .tlayolisBackSlider{
     background-image:url('../img/tlayolis/background-tlayolis-producto-desktop.jpg');
   }
+  #wrapSlider>div{ height: 100% !important}
+  #wrapSlider>a{display: none}
 }
 
 #interfazProducto{
@@ -757,12 +764,19 @@ nav#arrows>span>a:last-child{
 #popSliderMob>img{ width: 90% }
 #popSliderMob>div#swipeSliderMob{
   position: absolute;
-  bottom: 0;
+  top: calc(50% - 50px);
   left: 0;
   width: 100vw;
-  height: 80vh;
-  background: rgba(0,0,0,0);
+  height: 100px;
 }
+#arrowPopMobile{
+  position: relative;
+  width: 105px;
+  height: 35px;
+  margin: 10px auto;
+}
+#arrowPopMobile>a{ position: absolute }
+#arrowPopMobile>a:last-child{ right: 0 }
 /* desktop max */
 @media screen and (min-width:1500px){
   #mainProducto > article > div { height: 600px }
