--- a/css/master.css
+++ b/css/master.css
@@ -90,7 +90,7 @@ body{
   min-width: 300px;
   height: 100vh;
   background: #fff;
-  z-index: 9000;
+  z-index: 12000;
   display: -webkit-box;
   display: -ms-flexbox;
   display: -webkit-flex;
@@ -105,6 +105,7 @@ body{
 #percentage{
   font-family: 'Caecilia B', sans-serif;
   color: #000;
+  margin-top: 20px;
 }
 #salsaWrap{
   position: relative;
