--- a/css/master.css
+++ b/css/master.css
@@ -518,7 +518,7 @@ footer.main>p>a:hover{ opacity: 0.5; }
   left:0;
   width: 100vw;
   height: 100vh;
-  background: #490e0e;
+  background: #000033;
   flex-direction: column;
   -webkit-flex-direction:column;
   justify-content: center;
@@ -807,8 +807,26 @@ footer.main>p>a:hover{ opacity: 0.5; }
   -o-transform: scale(1.3,1.3);
   transform: scale(1.3,1.3);
 }
+#backtoTopMob{
+  display: block;
+  position: relative;
+  width: 100vw;
+  min-width: 250px;
+  height: 50px !important;
+  text-align: center;
+}
+#buttonBackTop{ display: none }
+#top{
+  width: 100vw;
+  height: 2px;
+  position: absolute;
+  top: 0;
+  background: red;
+}
 /* desktop */
 @media screen and (min-width:800px){
+  #backtoTopMob{ display: none !important }
+  #buttonBackTop{ display: block }
   #mainIndex>article.normal>ul>a{ display: none }
   body{ overflow-y: scroll }
   a.menuMobile{ display: none !important; }
